--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pydantic-settings>=2.12.0",
     "pytz>=2025.2",
     "requests>=2.32.5",
+    "supabase>=2.24.0",
     "tabulate>=0.9.0",
     "uvicorn>=0.38.0",
 ]
