--- a/backend/env.example
+++ b/backend/env.example
@@ -10,6 +10,7 @@ SUPABASE_SCHEMA=public
 
 MODEL_API_KEY=your-model-provider-key-here
 APIFY_API_KEY=your-apify-api-key-here
+JOBSPY_PROXIES=
 
 # Comma-separated list of allowed origins for CORS
 # Example: http://localhost:3000,https://your-frontend-domain.vercel.app
