--- a/backend/env.example
+++ b/backend/env.example
@@ -1,6 +1,5 @@
 RAPID_API_KEY=your-rapidapi-key-here
 LINKEDIN_API_KEY=your-linkedin-api-key-here
-THEIRSTACK_API_KEY=your-theirstack-api-key-here
 
 SUPABASE_URL=https://your-project-id.supabase.co
 SUPABASE_KEY=your-supabase-service-role-or-anon-key
@@ -10,6 +9,7 @@ SUPABASE_SCHEMA=public
 
 MODEL_API_KEY=your-model-provider-key-here
 APIFY_API_KEY=your-apify-api-key-here
+APIFY_ACTOR_ID=misceres~indeed-scraper
 JOBSPY_PROXIES=
 
 # Comma-separated list of allowed origins for CORS
