--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -35,6 +35,9 @@ dependencies = [
     # JobSpy for LinkedIn scraping
     "python-jobspy==1.1.79",
 
+    # BeautifulSoup for HTML parsing (Indeed scraper)
+    "beautifulsoup4>=4.12.0",
+
     # Supabase client for caching / storage
     "supabase==2.24.0",
 ]
