--- a/backend/env.example
+++ b/backend/env.example
@@ -1,19 +1,46 @@
+# Required API Keys
 RAPID_API_KEY=your-rapidapi-key-here
-LINKEDIN_API_KEY=your-linkedin-api-key-here
-
 SUPABASE_URL=https://your-project-id.supabase.co
 SUPABASE_KEY=your-supabase-service-role-or-anon-key
-DATABASE_URL=postgresql://user:password@host:5432/dbname
 
-SUPABASE_SCHEMA=public
-
+# Optional API Keys
 MODEL_API_KEY=your-model-provider-key-here
 APIFY_API_KEY=your-apify-api-key-here
 APIFY_ACTOR_ID=misceres~indeed-scraper
-JOBSPY_PROXIES=
 
-# Comma-separated list of allowed origins for CORS
+# Database (optional)
+DATABASE_URL=postgresql://user:password@host:5432/dbname
+
+# API Security (Required for production)
+API_KEY=your-secure-api-key-here
+API_KEY_HEADER=X-API-Key
+
+# Rate Limiting
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_PER_MINUTE=60
+RATE_LIMIT_PER_HOUR=500
+
+# Request Timeouts (in seconds)
+
+REQUEST_TIMEOUT_SECONDS=10
+JSEARCH_TIMEOUT=10
+INDEED_TIMEOUT=120
+LINKEDIN_TIMEOUT=30
+
+# Logging
+
+LOG_LEVEL=INFO
+LOG_FORMAT=json
+
+# Environment
+ENVIRONMENT=development
+
+# CORS - Comma-separated list of allowed origins
 # Example: http://localhost:3000,https://your-frontend-domain.vercel.app
+
 CORS_ORIGINS=http://localhost:3000
+
+# Optional: Set to true to validate required env vars at startup
+VALIDATE_ENV=false
 
 
